kubernetes/data/xbackbone/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
  name: xbackbone-ingress
spec:
  rules:
  - host: s.duck.moe
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xbackbone
            port:
              name: http
  - host: s.duck.me.uk
    http: *http_rules
  - host: share.duck.moe
    http: *http_rules
  tls:
  - hosts:
    - share.duck.moe
    - s.duck.moe
    - s.duck.me.uk
    secretName: xbackbone-cert
